# cmake_demo

./: readme.md
demo1/: CMakeLists.txt
demo2/: CMakeLists.txt  div.c  main.c
demo3/: CMakeLists.txt
demo3/src/: CMakeLists.txt
demo4/: CMakeLists.txt
demo4/src/: CMakeLists.txt  div.c  sub.c
demo5/: CMakeLists.txt  config.h.in  main.c
demo5/include/: head.h
demo5/src/: CMakeLists.txt  add.c  mult.c
